--- a/api-gateway/src/main/resources/application.properties
+++ b/api-gateway/src/main/resources/application.properties
@@ -1,24 +1,22 @@
+# Server Port
+server.port=8080
+
+# Spring Application Name
 spring.application.name=api-gateway
-server.port=9090
 
-# Set application type to reactive
-spring.main.web-application-type=reactive
-
-# Eureka client settings
-eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
+# Eureka Configuration
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 eureka.instance.prefer-ip-address=true
-eureka.client.register-with-eureka=true
-eureka.client.fetch-registry=true
 
-# Gateway Routes Configuration
+# Spring Cloud Gateway Routes
 spring.cloud.gateway.routes[0].id=user-service
-spring.cloud.gateway.routes[0].uri=lb://USER-SERVICE
+spring.cloud.gateway.routes[0].uri=lb://user-service
 spring.cloud.gateway.routes[0].predicates[0]=Path=/users/**
 
 spring.cloud.gateway.routes[1].id=task-service
-spring.cloud.gateway.routes[1].uri=lb://TASK-SERVICE
+spring.cloud.gateway.routes[1].uri=lb://task-service
 spring.cloud.gateway.routes[1].predicates[0]=Path=/tasks/**
 
 spring.cloud.gateway.routes[2].id=productivity-service
-spring.cloud.gateway.routes[2].uri=lb://PRODUCTIVITY-SERVICE
-spring.cloud.gateway.routes[2].predicates[0]=Path=/productivityservice/**
+spring.cloud.gateway.routes[2].uri=lb://productivityservice
+spring.cloud.gateway.routes[2].predicates[0]=Path=/productivity/**
