--- a/productivityservice/src/main/resources/application.properties
+++ b/productivityservice/src/main/resources/application.properties
@@ -1,18 +1,41 @@
+#spring.application.name=productivityservice
+#server.port=8083
+#spring.datasource.url=jdbc:mysql://localhost:3306/details
+#spring.datasource.username=root
+#spring.datasource.password=Virmonarn123
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.main.allow-bean-definition-overriding=true
+#
+#
+#eureka.client.register-with-eureka=true
+#eureka.client.fetch-registry=true
+#eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+#
+#eureka.instance.instance-id=${spring.application.name}:${server.port}
+#eureka.instance.prefer-ip-address=true
+
+
+# App Info
 spring.application.name=productivityservice
 server.port=8083
+
+# Database
 spring.datasource.url=jdbc:mysql://localhost:3306/details
 spring.datasource.username=root
 spring.datasource.password=Virmonarn123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
+# JPA Settings
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.main.allow-bean-definition-overriding=true
 
-
+# Eureka Config
 eureka.client.register-with-eureka=true
 eureka.client.fetch-registry=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
-
+eureka.client.service-url.defaultZone=http://localhost:8761/eureka/
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 eureka.instance.prefer-ip-address=true
