--- a/task-service/src/main/resources/application.properties
+++ b/task-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port=8082
 
 spring.application.name=task-service
 
-spring.datasource.url=jdbc:mysql://localhost:3306/details
+spring.datasource.url=spring.datasource.url=jdbc:mysql://mysql-dbproj:3306/details
 spring.datasource.username=root
 spring.datasource.password=Virmonarn123
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
@@ -16,3 +16,4 @@ eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
 
 eureka.instance.instance-id=${spring.application.name}:${server.port}
 eureka.instance.prefer-ip-address=true
+
