--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -2,7 +2,7 @@ server.port = 8081
 
 spring.application.name=user-service
 
-spring.datasource.url=jdbc:mysql://localhost:3306/details
+spring.datasource.url=spring.datasource.url=jdbc:mysql://mysql-dbproj:3306/details
 spring.datasource.username=root
 spring.datasource.password=Virmonarn123
 
